shimlang/test_scripts/errors/multiline_index_span.stderr
 2 | d[
     ^^^
 3 |     "missing"
     ^^^^^^^^^^^^^^
 4 | ];
     ^
Error: Key String(7, 0, u24([0, 0, 7])) not in dict
